--- a/assets/main.css
+++ b/assets/main.css
@@ -1,5 +1,7 @@
 @import url('https://fonts.googleapis.com/icon?family=Material+Icons|Material+Icons+Round');
 
+@import url('https://fonts.googleapis.com/css2?family=Rubik:ital,wght@0,300;0,400;0,600;0,700;1,300;1,400&display=swap');
+
 /* https://tailwindcss.com/docs/installation */
 @tailwind base;
 @tailwind components;
