--- a/assets/css/main.scss
+++ b/assets/css/main.scss
@@ -1,12 +1,11 @@
 @import url('https://fonts.googleapis.com/icon?family=Material+Icons|Material+Icons+Round');
-
 @import url('https://fonts.googleapis.com/css2?family=Rubik:ital,wght@0,300;0,400;0,600;0,700;1,300;1,400&display=swap');
+@import './text.scss';
 
 /* https://tailwindcss.com/docs/installation */
 @tailwind base;
 @tailwind components;
 @tailwind utilities;
-
 
 
 .icons {
