Added relation info and created social security relation card

--- a/assets/css/main.scss
+++ b/assets/css/main.scss
@@ -2,6 +2,7 @@
 @import url('https://fonts.googleapis.com/css2?family=Rubik:ital,wght@0,300;0,400;0,600;0,700;1,300;1,400&display=swap');
 @import './text.scss';
 @import './scrollbar.scss';
+@import './transitions.css';
 
 /* https://tailwindcss.com/docs/installation */
 @tailwind base;
