Fixed Social Security header breaks

--- a/assets/css/main.scss
+++ b/assets/css/main.scss
@@ -3,6 +3,7 @@
 @import './text.scss';
 @import './scrollbar.scss';
 @import './transitions.css';
+@import './breakdowns.scss';
 
 /* https://tailwindcss.com/docs/installation */
 @tailwind base;
