--- a/assets/css/main.scss
+++ b/assets/css/main.scss
@@ -4,6 +4,8 @@
 @import './scrollbar.scss';
 @import './transitions.css';
 @import './breakdowns.scss';
+@import './menu-toggle.css';
+@import './colors.scss';
 
 /* https://tailwindcss.com/docs/installation */
 @tailwind base;
