--- a/assets/css/main.scss
+++ b/assets/css/main.scss
@@ -1,4 +1,6 @@
-@import url('https://fonts.googleapis.com/icon?family=Material+Icons|Material+Icons+Round');
+
+@import url('https://fonts.googleapis.com/css2?family=Material+Symbols+Outlined');
+@import url('https://fonts.googleapis.com/css2?family=Material+Symbols+Sharp');
 @import url('https://fonts.googleapis.com/css2?family=Rubik:ital,wght@0,300;0,400;0,600;0,700;1,300;1,400&display=swap');
 @import './text.scss';
 @import './scrollbar.scss';
@@ -7,27 +9,11 @@
 @import './menu-toggle.css';
 @import './colors.scss';
 
-/* https://tailwindcss.com/docs/installation */
+
 @tailwind base;
 @tailwind components;
 @tailwind utilities;
 
-
-.icons {
-  font-family: 'Material Icons Round';
-  font-weight: normal;
-  font-style: normal;
-  font-size: 24px;
-  line-height: 1;
-  letter-spacing: normal;
-  text-transform: none;
-  display: inline-block;
-  white-space: nowrap;
-  word-wrap: normal;
-  direction: ltr;
-  -webkit-font-feature-settings: 'liga';
-  -webkit-font-smoothing: antialiased;
-}
 
 body, html {
   overflow-x: hidden;
