--- a/assets/css/text.scss
+++ b/assets/css/text.scss
@@ -4,5 +4,5 @@
 .h2 { @apply text-3xl font-semibold leading-loose; }
 .h3 { @apply text-2xl font-semibold leading-loose; }
 .h4 { @apply text-xl font-semibold leading-loose; }
-.h5 { @apply text-lg font-semibold leading-loose; }
+.h5 { @apply text-lg font-medium leading-loose; }
 .p { @apply text-base leading-relaxed; }
