--- a/assets/css/text.scss
+++ b/assets/css/text.scss
@@ -1,8 +1,8 @@
 
 
-.h1 { @apply text-4xl font-semibold leading-loose; }
-.h2 { @apply text-3xl font-semibold leading-loose; }
-.h3 { @apply text-2xl font-semibold leading-loose; }
-.h4 { @apply text-xl font-semibold leading-loose; }
-.h5 { @apply text-lg font-medium leading-loose; }
-.p { @apply text-base leading-relaxed; }
+.h1 { @apply text-2xl lg:text-4xl font-semibold leading-loose; }
+.h2 { @apply text-xl lg:text-3xl font-semibold leading-loose; }
+.h3 { @apply text-lg lg:text-2xl font-semibold leading-loose; }
+.h4 { @apply text-base lg:text-xl font-semibold leading-loose; }
+.h5 { @apply text-base lg:text-lg font-medium leading-loose; }
+body, .p { @apply text-sm lg:text-base leading-relaxed; }
