fix: Transições de paginas mudanças de paginas

--- a/assets/css/main.scss
+++ b/assets/css/main.scss
@@ -23,3 +23,15 @@ body, html {
 .max-w-full-vw {
   max-width: calc(100vw - 64px);
 }
+
+.min-h-container {
+  min-height: calc(100vh - 192px);
+}
+
+.h-container {
+  height: calc(100vh - 192px);
+}
+
+.h-container-50 {
+  height: calc(50vh - 192px);
+}
