--- a/assets/css/main.scss
+++ b/assets/css/main.scss
@@ -7,6 +7,7 @@
 @import './transitions.css';
 @import './breakdowns.scss';
 @import './menu-toggle.css';
+@import './table.scss';
 @import './colors.scss';
 @import 'pell/dist/pell.css';
 
