--- a/assets/css/text.scss
+++ b/assets/css/text.scss
@@ -1,12 +1,33 @@
 
 
-h1, .h1 { @apply text-4xl lg:text-4xl font-semibold leading-loose; }
-h2, .h2 { @apply text-xl lg:text-3xl font-semibold leading-loose; }
-h3, .h3 { @apply text-lg lg:text-2xl font-semibold leading-loose; }
-h4, .h4 { @apply text-base lg:text-xl font-semibold leading-loose; }
-h5, .h5 { @apply text-base lg:text-lg font-medium leading-loose; }
-body, p, .p { @apply text-sm lg:text-base leading-relaxed; }
 
-h1 { font-size: 2.25rem !important; }
-h2 { font-size: 1.5rem !important; }
-h3 { font-size: 1.2rem !important; }
+h1, .h1 { 
+  font-size: 2.25rem !important;
+  line-height: 2;
+  font-weight: 600;
+}
+h2, .h2 { 
+  font-size: 1.5rem !important; 
+  line-height: 2;
+  font-weight: 600;
+}
+h3, .h3 { 
+  font-size: 1.2rem !important; 
+  line-height: 2;
+  font-weight: 600;
+}
+h4, .h4 { 
+  font-size: 1.2rem !important; 
+  line-height: 2;
+  font-weight: 600;
+}
+h5, .h5 { 
+  font-size: 1.2rem !important; 
+  line-height: 2;
+  font-weight: 500;
+}
+body, p, .p { 
+  font-size: 1.2rem !important; 
+  line-height: 1.85;
+  font-weight: 400;
+}
